Bug#118927 Fix incorrect hex representation in SHOW CREATE LIBRARY

This commit fixes the incorrect hexadecimal representation of binary
libraries in SHOW CREATE LIBRARY output. The issue produces malformed
hex literals where some bytes are incorrectly expanded with "FFFFFF"
patterns, violating the standard convention that each byte should be
represented by exactly 2 hex digits.

For example, a binary library would incorrectly display as:
0x3872FFFFFFD3FFFFFFBBFFFFFFA6...

Instead of the correct standard representation:
0x3872D3BBA66A27A9...

This incorrect representation produces bloated output that violates
universal hexadecimal formatting conventions. On x86_64 (where char
is signed by default), negative byte values undergo sign extension,
resulting in "FFFFFF" patterns in the hex representation. On AArch64
(where char is unsigned by default), these patterns are absent.

The fix:
  - Modifies the binary_to_hex function to mask each byte value with & 0xFF,
    ensuring each byte is properly represented with exactly 2 hex digits
  - Updates the sp-library-binary.result test file to reflect the corrected
    hex representation

This contribution is under the OCA signed by Amazon and covering
submissions to the MySQL project.